Corrected hyperlink and dark mode default

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -168,13 +168,14 @@ body.dark-mode .social-icons a:hover {
 .highlighted-publication {
   background-color: #ffffe0; /* light yellow */
   border: 1px solid #f5f5c5;
-  padding: 1rem;
-  border-radius: 6px;
+  padding: 0.5rem;
+  border-radius: 0px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.05);
 }
 .publication {
   display: flex;
-  gap: 1.5rem;
+  gap: 2rem;
+  padding: 0.5rem;
   margin-bottom: 2rem;
 }
 .publication img {
